# borealis-rs-test

./: Cargo.toml  main.xml  main2.xml
.cargo/: config.toml
src/: main.rs
src/lib/: mod.rs
src/lib/core/: application.rs  basic_view.rs  box_view.rs  input.rs  mod.rs  view.rs  xml.rs
src/lib/platform/glfw/: input.rs  mod.rs  platform.rs  video.rs
src/lib/view/: applet_frame.rs  button.rs  header.rs  image.rs  label.rs  rectangle.rs  scrolling_frame.rs  sidebar.rs  tab_frame.rs
