[package]
name = "borealis-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanovg = { version = "1.0.2", features = ["gl3"] }
nanovg-sys = "1.0.2"
glfw = { version = "0.54.0", default-features = false }
glm = "0.2.3"
gl = "0.14.0"
log = "0.4.20"
gl_loader = "0.1.2"
strum = "0.25.0"
strum_macros = "0.25.0"
rust-i18n = "2.3.0"
dyn-fmt = "0.4.0"
chrono = "0.4.31"
once_cell = "1.19.0"
yoga = "0.4.0"
rand = "0.8.5"
ordered-float = "3.4.0"
xml-rs = "0.8.19"
env_logger = "0.10.1"
xmltree = "0.10.3"
